# rich-darts

./: .dockerignore  .env  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  DockerfileChef  DockerfileProject  README.md  changelog.md  docker-build.sh  logging_config.yaml  richDarts.db  tailwind.config.js
assets/: main.css  tailwind.css
migrations/2025-03-25-0_statusType/: down.sql  up.sql
migrations/2025-03-25-1_dartmatch/: down.sql  up.sql
migrations/2025-03-25-1_match/: up.sql
migrations/2025-03-25-2_dartset/: down.sql  up.sql
migrations/2025-03-25-3_dartleg/: down.sql  up.sql
migrations/2025-03-25-3_leg/: up.sql
migrations/2025-03-25-4_score/: down.sql  up.sql
src/: backend.rs  domain.rs  main.rs  schema.rs  schema_manual.rs
src/backend/: backend.rs  dart_leg.rs  dart_match.rs  dart_set.rs  darts_match.rs  logger.rs  mod.rs
src/backend/api/: dart_leg.rs  dart_match.rs  dart_score.rs  dart_set.rs  mod.rs
src/backend/model/: dart_leg.rs  dart_score.rs  dart_set.rs  mod.rs
src/backend/models/: dart_leg.rs  dart_match.rs  dart_set.rs  mod.rs
src/components/: breadcrumb.rs  calculations.rs  display_legs.rs  display_matches.rs  display_sets.rs  domain.rs  enter_panel.rs  home_screen.rs  main.rs  main_component.rs  main_score_component.rs  mod.rs  panel.rs  score_display.rs  test.rs
