[package]
name = "rich_darts"
version = "0.1.0"
authors = ["mreich <reich@beontra.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daisy_rsx = "0.1.14"
dioxus = { version = "0.6.0", features = ["fullstack"] }
dioxus-logger = "0.6.2"
itertools = "0.14.0"
rusqlite = { version = "0.34.0", features = ["bundled"], optional = true }
tracing = "0.1.41"
tracing-wasm = "0.2.1"


[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
rusqlite = ["dep:rusqlite"]
server = ["dioxus/server", "dep:rusqlite"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
