[package]
name = "rich_darts"
version = "0.1.0"
authors = ["mreich <reich@beontra.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["fullstack", "router"] }
dioxus-logger = "0.6.2"
itertools = "0.14.0"
log = {version = "0.4.27", optional = true}
log4rs = {version = "1.3.0", optional = true}

#https://github.com/rusqlite/rusqlite/issues/1631
rusqlite = { version = "0.32.1", features = ["bundled"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"


[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:rusqlite", "dep:log", "dep:log4rs"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

